<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_general"
        android:title="@string/pref_general">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable_status"
            android:summary="@string/pref_enable_status_sum"
            android:title="@string/pref_enable_status_title">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_broadcast"
            android:summary="@string/pref_broadcast_sum"
            android:title="@string/pref_broadcast_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_app_service"
            android:summary="@string/pref_app_service_sum"
            android:title="@string/pref_app_service_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_just_trust_me"
            android:summary="@string/pref_just_trust_me_sum"
            android:title="@string/pref_just_trust_me_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_system_app"
            android:summary="@string/pref_system_app_sum"
            android:title="@string/pref_system_app_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
        <EditTextPreference android:key="pref_collect_bytecode_text"
            android:dialogTitle="@string/pref_collect_bytecode_dialogTitle"
            android:title="@string/pref_collect_bytecode_title"
            android:summary="@string/pref_collect_bytecode_sum"
            android:dependency="pref_enable_status">
        </EditTextPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_trace_anti"
            android:summary="@string/pref_trace_anti_sum"
            android:title="@string/pref_trace_anti_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_anti_thread_create"
            android:summary="@string/pref_anti_thread_create_sum"
            android:title="@string/pref_anti_thread_create_title"
            android:dependency="pref_trace_anti">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_trace_file"
            android:summary="@string/pref_trace_file_sum"
            android:title="@string/pref_trace_file_title"
            android:dependency="pref_trace_anti">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_trace_sys_call"
            android:summary="@string/pref_trace_sys_call_sum"
            android:title="@string/pref_trace_sys_call_title"
            android:dependency="pref_trace_anti">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_trace_trace"
            android:summary="@string/pref_trace_trace_sum"
            android:title="@string/pref_trace_trace_title"
            android:dependency="pref_trace_anti">
        </CheckBoxPreference>
        <!--<MultiSelectListPreference
            android:key="pref_patch_ssl"
            android:summary="@string/pref_patch_ssl_sum"
            android:title="@string/pref_patch_ssl_title"
            android:dialogTitle="@string/pref_patch_ssl_dialogTitle"
            android:entries="@array/pref_patch_ssl_entries"
            android:entryValues="@array/pref_patch_ssl_values"
            android:dependency="pref_trace_anti">
        </MultiSelectListPreference>-->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_debuggable_all"
            android:summary="@string/pref_debuggable_all_sum"
            android:title="@string/pref_debuggable_all_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
        <!--
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_local_root"
            android:summary="@string/pref_local_root_sum"
            android:title="@string/pref_local_root_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
        -->
        <!--<CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_stetho"
            android:summary="@string/pref_stetho_sum"
            android:title="@string/pref_stetho_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>-->
        <!--<CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_ssl_trust_killer"
            android:summary="@string/pref_ssl_trust_killer_sum"
            android:title="@string/pref_ssl_trust_killer_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>-->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_debug"
            android:summary="@string/pref_debug_sum"
            android:title="@string/pref_debug_title"
            android:dependency="pref_enable_status">
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>