<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_launcher"
        android:title="@string/pref_launcher">
        <ListPreference
            android:key="pref_launcher_app"
            android:persistent="false"
            android:summary="@string/pref_launcher_app_sum"
            android:title="@string/pref_launcher_app_title">
        </ListPreference>
        <!--
        <EditTextPreference
            android:dialogTitle="@string/pref_vpn_host_dialogTitle"
            android:inputType="textUri"
            android:key="pref_vpn_host"
            android:summary="@string/pref_vpn_host_sum"
            android:title="@string/pref_vpn_host_title">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="9000"
            android:dialogTitle="@string/pref_vpn_port_dialogTitle"
            android:inputType="phone"
            android:key="pref_vpn_port"
            android:summary="@string/pref_vpn_port_sum"
            android:title="@string/pref_vpn_port_title">
        </EditTextPreference>
        <EditTextPreference
            android:dialogTitle="@string/pref_vpn_password_dialogTitle"
            android:inputType="textPassword"
            android:key="pref_vpn_password"
            android:summary="@string/pref_vpn_password_sum"
            android:title="@string/pref_vpn_password_title">
        </EditTextPreference>
        -->
        <EditTextPreference
            android:dialogTitle="@string/pref_socks_host_dialogTitle"
            android:inputType="textUri"
            android:key="pref_socks_host"
            android:summary="@string/pref_socks_host_sum"
            android:title="@string/pref_socks_host_title">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="8889"
            android:dialogTitle="@string/pref_socks_port_dialogTitle"
            android:inputType="phone"
            android:key="pref_socks_port"
            android:summary="@string/pref_socks_port_sum"
            android:title="@string/pref_socks_port_title">
        </EditTextPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_socks"
            android:summary="@string/pref_socks_sum"
            android:title="@string/pref_socks_title"
            android:dependency="pref_socks_host">
        </CheckBoxPreference>
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_vpn"
            android:persistent="true"
            android:title="VPN Sniffer"/>
        <EditTextPreference
            android:dialogTitle="@string/pref_ssl_ports_dialogTitle"
            android:inputType="textUri"
            android:key="pref_ssl_ports"
            android:summary="@string/pref_ssl_ports_sum"
            android:defaultValue="443"
            android:title="@string/pref_ssl_ports_title">
        </EditTextPreference>
        <EditTextPreference
            android:dialogTitle="@string/pref_mitm_timeout_dialogTitle"
            android:inputType="number"
            android:key="pref_mitm_timeout"
            android:summary="@string/pref_mitm_timeout_sum"
            android:defaultValue="10000"
            android:title="@string/pref_mitm_timeout_title">
        </EditTextPreference>
        <!--<CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_vpn_debug"
            android:summary="@string/pref_vpn_debug_sum"
            android:title="@string/pref_vpn_debug_title">
        </CheckBoxPreference>-->
    </PreferenceCategory>
</PreferenceScreen>